fixing header spacing and titles based on user

--- a/app/assets/stylesheets/styles.css.scss
+++ b/app/assets/stylesheets/styles.css.scss
@@ -216,6 +216,7 @@ header ul { padding-top: 35px; }
 header ul li { list-style: none; float: left; text-transform: uppercase; letter-spacing: 2px; }
 header ul li a { display: block; margin: 0 30px; color: #4d4959; }
 .r_spacer { margin-right: 180px; }
+.r_spacer2 { margin-right: 120px; }
 .intro { padding: 115px 0; background-color: #fbfbfb; }
 .padding-top {padding: 15px; background-color: #f4f5fc; }
 .padding-right {padding: 80px; }
